Revision history for Perl extension Coro.

TODO: should explore PerlIO::coroaio (perl leaks like hell).
TODO: channel->maxsize(newsize)?
TODO: __GCC_HAVE_DWARF2_CFI_ASM
TODO: swap_sv, maybe add scope_swap_sv, andallow to unswap by repeat?
TODO: swap_sv not undone in pool
TODO: croak when async_pool tries to run canceled thread?

	- split Coro::Semaphore::up/adjust into separate xs functions
          for better error reporting, at slight codesize increase.

6.49 Sat Oct 17 01:40:12 CEST 2015
	- throwing an exception to a thread waiting in
          Coro::Handle using Coro::EV did not stop the watchers,
          causing the next call to fail (testcase by Martin Pritchard).
	- bump minimum perl version to 5.10.

6.48 Sun Oct  4 19:03:51 CEST 2015
	- fix memory leak when Coro::Handle uses Coro::EV internally
          (testcase by Sten Sten).
        - update code to libev 4 API (internally, Coro still used the
          version 3 API calls).
        - remove unused hv_sig.

6.47 Sat Jul 11 03:58:20 CEST 2015
	- swap_svs - NVs can be in the SV head beginning with 5.20.

6.46 Tue Jun 30 14:36:30 CEST 2015
	- restore portability to perls with windows fork emulation
          (patch by Petr Písař).

6.45 Tue Jun 30 01:40:08 CEST 2015
	- restore portability to perl 5.16 and below.

6.44 Tue Jun 30 00:41:54 CEST 2015
	- avoid segfaulting (or worse) when tracing a canceled thread.
	- the Event module silently broke it's public hook API, causing
          failures on perls compiled with -Duselongdouble. Requiring
          the latest version of Event because I don't know which release
          changed this (it's not mentioned in the ChangeLog).
        - allow xs level enterleave hooks via CoroAPI.

6.43 Thu Jun  4 15:38:14 CEST 2015
	- use stability canary.
	- port to stableperl-5.22.0-1.001.
        - update libecb.

6.42 Wed Feb 11 20:29:52 CET 2015
	- Coro::SemaphoreSet->try did not actually work (analyzed by
          SATO Kentaro).