@@ -7,8 +7,14 @@ TODO: swap_sv, maybe add scope_swap_sv, andallow to unswap by repeat?
 TODO: swap_sv not undone in pool
 TODO: croak when async_pool tries to run canceled thread?
 
+	- swap_sv swapping order was not symmetrical, causing
+          wrong swaps when swap_sv was used multiple times on the
+          same sv in the same thread.
+        - swap_sv calls can now be undone by calling it again
+          with the same variables.
 	- split Coro::Semaphore::up/adjust into separate xs functions
           for better error reporting, at slight codesize increase.
+        - (libcoro) arm assembly support.
 
 6.49 Sat Oct 17 01:40:12 CEST 2015
 	- throwing an exception to a thread waiting in
